@startuml
'https://plantuml.com/class-diagram

class Classes {
}
class Constructors {
}
class Executables {
}
class Fields {
}
class Java2Puml {
}
class Main {
}
class Methods {
}

Main --> Java2Puml
Main --> Classes

Java2Puml -> Classes

Classes --> Executables
Classes --> Fields

Executables <|-- Methods
Executables <|-- Constructors

@enduml